--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,80 @@
+@import url('./css/scrollbar.css');
+
+html,
+body {
+  height: 100%;
+  min-height: 100%;
+}
+
 body {
   margin: 0;
   padding: 0;
+  font-size: 11px;
   font-family: sans-serif;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+/* --------------------------------------------
+
+ CLASSES
+
+-------------------------------------------- */
+
+.hidden {
+  display: none !important;
+  visibility: hidden !important;
+}
+
+.flex-columns {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+}
+
+.flex-rows {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.absolute {
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  position: absolute;
+}
+
+.relative {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
+.lock-overlay {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.85);
+}
+
+.screen {
+  height: 100%;
+  min-height: 100%;
+  text-align: center;
+  justify-content: flex-start;
+}
+
+/* --------------------------------------------
+
+ ELEMENTS
+
+-------------------------------------------- */
+
+#root,
+#main-container {
+  height: 100%;
+  min-height: 100%;
 }
