--- a/src/app/components/kanbanitem.css
+++ b/src/app/components/kanbanitem.css
@@ -1,17 +1,23 @@
 .kanbanitem-container {
   /* padding: 22px 0; */
+  cursor: grab;
   padding: 10px;
   color: #333333;
-  cursor: pointer;
   text-align: left;
   border-radius: 5px;
   background-color: #FAFAFA;
   border-bottom: 1px solid #CCCCCC;
 }
 
-.kanbanitem-container a {
-  color: #333333;
-  text-decoration: none;
+.kanbanitem-button {
+  top: 4px;
+  border: 0;
+  right: 4px;
+  width: 22px;
+  height: 22px;
+  cursor: pointer;
+  border-radius: 50%;
+  position: absolute;
 }
 
 .kanbanitem-container + .kanbanitem-container {
@@ -21,6 +27,7 @@
 .kanbanitem-date {
   margin: 0;
   text-align: right;
+  margin-right: 25px;
 }
 
 .kanbanitem-title {
