--- a/src/app/kanbanboard.css
+++ b/src/app/kanbanboard.css
@@ -21,7 +21,7 @@
 
 --------------------------------------------------------- */
 
-.kanban-board {
+.kanbanboard {
   flex: 1;
   overflow: hidden;
   padding: 10px 5px;
