--- a/src/app/components/kanbancard.css
+++ b/src/app/components/kanbancard.css
@@ -1,4 +1,4 @@
-.kanbanitem-container {
+.kanbancard-container {
   /* padding: 22px 0; */
   cursor: grab;
   padding: 10px;
@@ -9,7 +9,7 @@
   border-bottom: 1px solid #CCCCCC;
 }
 
-.kanbanitem-button {
+.kanbancard-button {
   top: 4px;
   border: 0;
   right: 4px;
@@ -20,17 +20,17 @@
   position: absolute;
 }
 
-.kanbanitem-container + .kanbanitem-container {
+.kanbancard-container + .kanbancard-container {
   margin-top: 5px;
 }
 
-.kanbanitem-date {
+.kanbancard-date {
   margin: 0;
   text-align: right;
   margin-right: 25px;
 }
 
-.kanbanitem-title {
+.kanbancard-title {
   margin-top: 7px;
   font-size: 1.2em;
 }
