--- a/src/app/components/kanbancard.css
+++ b/src/app/components/kanbancard.css
@@ -1,12 +1,21 @@
-.kanbancard-container {
-  /* padding: 22px 0; */
+.kanbancard,
+.kanbancard-placeholder {
+  width: 100%;
   cursor: grab;
+  height: 107px;
+  border-radius: 5px;
+  border-bottom: 1px solid #CCCCCC;
+}
+
+.kanbancard-placeholder {
+  background-color: #AACCEE;
+}
+
+.kanbancard {
   padding: 10px;
   color: #333333;
   text-align: left;
-  border-radius: 5px;
   background-color: #FAFAFA;
-  border-bottom: 1px solid #CCCCCC;
 }
 
 .kanbancard-button {
@@ -20,10 +29,6 @@
   position: absolute;
 }
 
-.kanbancard-container + .kanbancard-container {
-  margin-top: 5px;
-}
-
 .kanbancard-date {
   margin: 0;
   text-align: right;
@@ -33,4 +38,15 @@
 .kanbancard-title {
   margin-top: 7px;
   font-size: 1.2em;
+}
+
+.kanbancard-title span {
+  max-height: 30px;
+  overflow: hidden;
+}
+
+.kanbancard + .kanbancard,
+.kanbancard-placeholder + .kanbancard,
+.kanbancard + .kanbancard-placeholder {
+  margin-top: 5px;
 }
