--- a/src/app/components/kanbancolumn.css
+++ b/src/app/components/kanbancolumn.css
@@ -2,6 +2,7 @@
   width: 25%;
   display: flex;
   margin: 0 5px;
+  min-width: 290px;
   max-height: 100%;
   border-radius: 5px;
   padding: 0 4px 0 8px;
