--- a/src/app/kanbanboard.css
+++ b/src/app/kanbanboard.css
@@ -21,7 +21,7 @@
 
 --------------------------------------------------------- */
 
-.kanbanboard {
+.kanban-board {
   flex: 1;
   margin: 0 5px;
   padding: 10px 0;
