able to drop card into column

--- a/src/app/components/kanbanboard/column.css
+++ b/src/app/components/kanbanboard/column.css
@@ -10,6 +10,10 @@
   background-color: #E2E4E6;
 }
 
+.board-column.hovered {
+  background-color: #C0CCD8;
+}
+
 .board-column-header {
   text-transform: uppercase;
 }
