--- a/src/fontello/css/fontello.css
+++ b/src/fontello/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?45216774');
-  src: url('../font/fontello.eot?45216774#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?45216774') format('woff2'),
-       url('../font/fontello.woff?45216774') format('woff'),
-       url('../font/fontello.ttf?45216774') format('truetype'),
-       url('../font/fontello.svg?45216774#fontello') format('svg');
+  src: url('../font/fontello.eot?30573588');
+  src: url('../font/fontello.eot?30573588#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?30573588') format('woff2'),
+       url('../font/fontello.woff?30573588') format('woff'),
+       url('../font/fontello.ttf?30573588') format('truetype'),
+       url('../font/fontello.svg?30573588#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?45216774#fontello') format('svg');
+    src: url('../font/fontello.svg?30573588#fontello') format('svg');
   }
 }
 */
@@ -69,3 +69,4 @@
 .myjobboard-tag:before { content: '\e80b'; } /* '' */
 .myjobboard-comment:before { content: '\e80c'; } /* '' */
 .myjobboard-search:before { content: '\e80d'; } /* '' */
+.myjobboard-star:before { content: '\e80e'; } /* '' */
