--- a/src/app/components/ui/abstractcard.css
+++ b/src/app/components/ui/abstractcard.css
@@ -1,12 +1,13 @@
 .abstract-card-button {
-  top: 4px;
   border: 0;
-  right: 4px;
+  padding: 0;
   width: 22px;
   height: 22px;
+  display: block;
   cursor: pointer;
+  line-height: 22px;
+  text-align: center;
   border-radius: 50%;
-  position: absolute;
 }
 
 .abstract-card-date {
@@ -18,4 +19,12 @@
 .abstract-card-title {
   margin-top: 7px;
   font-size: 1.2em;
+}
+
+.abstract-card-left-column {
+  padding-right: 12px;
+}
+
+.abstract-card-right-column button.active {
+  color: #FB0FB0;
 }
