--- a/src/index.css
+++ b/src/index.css
@@ -80,3 +80,22 @@ body {
   height: 100%;
   min-height: 100%;
 }
+
+#screen-header {
+  color: white;
+  height: auto;
+  padding: 20px;
+  background-color: #222222;
+}
+
+/*
+.screen-logo {
+  animation: screen-logo-spin infinite 20s linear;
+  height: 80px;
+}
+
+@keyframes screen-logo-spin {
+  from { transform: rotate(0deg); }
+  to { transform: rotate(360deg); }
+}
+*/
