--- a/src/app/components/overlaycard.css
+++ b/src/app/components/overlaycard.css
@@ -5,6 +5,7 @@
   right: 0;
   bottom: 0;
   overflow: hidden;
+  overflow-y: auto;
   position: absolute;
 }
 
@@ -22,15 +23,26 @@
   background-color: rgba(0, 0, 0, 0.9);
 }
 
+#overlaycard .overlaycard-scroller {
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  overflow-y: auto;
+  overflow-x: hidden;
+  position: absolute;
+}
+
 #overlaycard .cardcontainer {
   width: 33%;
+  height: auto;
   padding: 12px;
   text-align: left;
   overflow: hidden;
   margin: 22px auto;
   border-radius: 4px;
   background-color: white;
-  height: calc(100% - 44px);
+  min-height: calc(100% - 44px);
 }
 
 #overlaycard .cardcontainer img {
@@ -38,27 +50,44 @@
   visibility: hidden;
 }
 
-#overlaycard .abstract-card.relative {
+#overlaycard .abstract-card {
   height: auto;
 }
 
-#overlaycard .overlaycard-header .itemsource {
+#overlaycard .abstract-card a {
+  color: inherit;
+  cursor: default;
+  text-decoration: none;
+}
+
+#overlaycard .overlaycard-header > p {
   color: white;
   padding: 3px 12px;
+  border-radius: 4px;
   background-color: #AACCEE;
 }
 
-#overlaycard .overlaycard-footer .visitlink {
+#overlaycard .overlaycard-header > p + p {
+  margin-left: 7px;
+}
+
+#overlaycard .overlaycard-header > p a,
+#overlaycard .overlaycard-header > p a:hover,
+#overlaycard .overlaycard-header > p a:visited {
   color: white;
-  padding: 12px;
-  display: block;
-  text-align: center;
-  background-color: #AACCEE;
+  text-decoration: none;
+}
+
+#overlaycard .overlaycard-content {
+  padding: 20px;
+  border-radius: 4px;
+  background-color: #EDEFF0;
 }
 
 button.overlaycard-close {
   top: 10px;
   right: 10px;
+  z-index: 900;
   position: absolute;
   border: 0;
   width: 40px;
@@ -70,4 +99,30 @@ button.overlaycard-close {
   text-align: center;
   border-radius: 50%;
   background: transparent;
+}
+
+/* ------------------------------------------------------------
+
+ FORM
+
+------------------------------------------------------------ */
+
+.form label > * {
+  width: 100%;
+  display: block;
+}
+
+.form label > span {
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+.form label > input,
+.form label > textarea {
+  padding: 7px;
+  margin-top: 3px;
+  border-width: 1px;
+  border-radius: 4px;
+  border-style: solid;
+  border-color: #BFBFBF;
 }
