--- a/src/fontello/css/fontello.css
+++ b/src/fontello/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?30573588');
-  src: url('../font/fontello.eot?30573588#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?30573588') format('woff2'),
-       url('../font/fontello.woff?30573588') format('woff'),
-       url('../font/fontello.ttf?30573588') format('truetype'),
-       url('../font/fontello.svg?30573588#fontello') format('svg');
+  src: url('../font/fontello.eot?99479951');
+  src: url('../font/fontello.eot?99479951#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?99479951') format('woff2'),
+       url('../font/fontello.woff?99479951') format('woff'),
+       url('../font/fontello.ttf?99479951') format('truetype'),
+       url('../font/fontello.svg?99479951#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?30573588#fontello') format('svg');
+    src: url('../font/fontello.svg?99479951#fontello') format('svg');
   }
 }
 */
@@ -56,17 +56,13 @@
 }
  
 .myjobboard-mail:before { content: '\e800'; } /* '' */
-.myjobboard-check:before { content: '\e801'; } /* '' */
+.myjobboard-cancel-circled:before { content: '\e801'; } /* '' */
 .myjobboard-cancel:before { content: '\e802'; } /* '' */
-.myjobboard-chat:before { content: '\e803'; } /* '' */
 .myjobboard-calendar:before { content: '\e804'; } /* '' */
-.myjobboard-resize-full:before { content: '\e805'; } /* '' */
-.myjobboard-trash:before { content: '\e806'; } /* '' */
-.myjobboard-user-add:before { content: '\e807'; } /* '' */
-.myjobboard-resize-small:before { content: '\e808'; } /* '' */
+.myjobboard-user:before { content: '\e805'; } /* '' */
+.myjobboard-box:before { content: '\e807'; } /* '' */
 .myjobboard-thumbs-up:before { content: '\e809'; } /* '' */
 .myjobboard-thumbs-down:before { content: '\e80a'; } /* '' */
-.myjobboard-tag:before { content: '\e80b'; } /* '' */
 .myjobboard-comment:before { content: '\e80c'; } /* '' */
 .myjobboard-search:before { content: '\e80d'; } /* '' */
-.myjobboard-star:before { content: '\e80e'; } /* '' */
+.myjobboard-export:before { content: '\e80f'; } /* '' */
