--- a/src/app/components/progressbar.css
+++ b/src/app/components/progressbar.css
@@ -6,7 +6,7 @@
 .loader,
 .loader::before {
   height: 4px;
-  background-color: #2980B9;
+  background-color: #2980b9;
 }
 
 .loader {
@@ -17,38 +17,11 @@
 }
 
 .loader::before {
-  content: "";
+  content: '';
   left: -200px;
   width: 200px;
   display: block;
   position: absolute;
-  background-color: #DDDDDD;
+  background-color: #dddddd;
   animation: loading 2s linear infinite;
-}
-
-@keyframes loading {
-  from {
-    left: -200px;
-    width: 30%;
-  }
-
-  50% {
-    width: 30%;
-  }
-
-  70% {
-    width: 70%;
-  }
-
-  80% {
-    left: 50%;
-  }
-
-  95% {
-    left: 120%;
-  }
-
-  to {
-    left: 100%;
-  }
 }
