ajout des styles sur les colonnes et affichage des titres des annonces

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -5,5 +5,5 @@ $default-padding: 12px !default;
 // $BorderSizes: () !default;
 // $BorderRadiusSizes: () !default;
 
-$FontSizes: (11, 12, 18, 20, 22, 24) !default;
+$FontSizes: (6, 7, 8, 9, 11, 12, 18, 20, 22, 24) !default;
 $MarginPaddingSizes: (3, 5, 6, 7, 9, 12, 18, 24, 48) !default;
