update scrollbar CSS

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,6 @@
 @import './scss/_variables.scss';
 @import '~@iziges/napper-styles/styles.scss';
+@import './scss/_scrollbar.scss';
 @import './scss/_animations.scss';
 
 * {
