--- a/src/scss/_scrollbar.scss
+++ b/src/scss/_scrollbar.scss
@@ -4,11 +4,11 @@
 }
 
 .fancy-scrollbar::-webkit-scrollbar-track-piece {
-  background: #D6DADC;
+  background: #00000011;
 }
 
 .fancy-scrollbar::-webkit-scrollbar-thumb {
-  background: #C4C9CC;
+  background: #4B5362;
 }
 
 .fancy-scrollbar::-webkit-scrollbar-thumb,
