--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,34 @@
-@import './scss/_variables.scss';
+$body-width: 100% !default;
+$body-font-size: 16px !default;
+$default-padding: 12px !default;
+// $BorderStyle: solid;
+// $BorderSizes: () !default;
+// $BorderRadiusSizes: () !default;
+
+$FontSizes: (
+  6,
+  7,
+  8,
+  9,
+  10,
+  11,
+  12,
+  13,
+  14,
+  18,
+  20,
+  22,
+  24,
+  26,
+  28,
+  32
+) !default;
+$MarginPaddingSizes: (3, 5, 6, 7, 9, 12, 14, 15, 18, 24, 32, 48) !default;
+
 @import '~@iziges/napper-styles/styles.scss';
 @import './scss/_scrollbar.scss';
 @import './scss/_animations.scss';
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&display=swap');
 
 * {
   outline: none;
@@ -9,8 +36,8 @@
 }
 
 body {
-  font-size: 11px;
-  font-family: sans-serif;
+  font-size: 12px;
+  font-family: 'Open Sans', sans-serif;
 }
 
 #root {
