--- a/src/index.scss
+++ b/src/index.scss
@@ -44,6 +44,10 @@ body {
   @extend .is-full-layout;
 }
 
+.themed {
+  transition: color 0.5s, background-color 0.5;
+}
+
 .shadowed {
   -webkit-box-shadow: 5px 5px 20px -10px rgba(0, 0, 0, 0.25);
   box-shadow: 5px 5px 20px -10px rgba(0, 0, 0, 0.25);
