--- a/src/index.scss
+++ b/src/index.scss
@@ -49,8 +49,8 @@ body {
 }
 
 .shadowed {
-  -webkit-box-shadow: 5px 5px 20px -10px rgba(0, 0, 0, 0.25);
-  box-shadow: 5px 5px 20px -10px rgba(0, 0, 0, 0.25);
+  -webkit-box-shadow: 0 4px 14px -2px rgba(0, 8, 16, 0.08);
+  box-shadow: 0 4px 14px -2px rgba(0, 8, 16, 0.08);
 }
 
 .no-no-flex-shrink {
