--- a/src/index.scss
+++ b/src/index.scss
@@ -44,6 +44,16 @@ body {
   @extend .is-full-layout;
 }
 
+.is-scrollable-x {
+  overflow-x: scroll;
+  overflow-y: hidden;
+}
+
+.is-scrollable-y {
+  overflow-x: hidden;
+  overflow-y: scroll;
+}
+
 .themed {
   transition: color 0.5s, background-color 0.5;
 }
